Make most of the Plone stuff visible in the theme.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Maurits van Rees</title>
+<title>Maurits van Rees Theme</title>
 </head>
-
 <body>
-<h1>Page Title 2</h1>
+<div id="logo" />
+<div id="menu" />
+<div id="search" />
 <div id="content" />
-
-
-<hr>
-<address></address>
-<!-- hhmts start --> Last modified: Wed Jan 19 16:19:54 CET 2011 <!-- hhmts end -->
-</body> </html>
+<div id="sidebar" />
+<div id="footer" />
+</body>
+</html>
