Move some stuff around from plone to theme. Note that we only have portlets on the right on some pages, like weblog, and never on the left, at least currently.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,13 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
+<html xmlns="http://www.w3.org/1999/xhtml"> <head>
 <title>Maurits van Rees Theme</title>
 </head>
 <body>
-<div id="logo" />
-<div id="menu" />
+<div id="visual-portal-wrapper">
+<ul id="portal-siteactions">
+
+    <li id="siteaction-sitemap"><a title="Site Map" accesskey="3" href="sitemap">Site Map</a></li>
+    <li id="siteaction-accessibility"><a title="Accessibility" accesskey="0" href="accessibility-info">Accessibility</a></li>
+    <li id="siteaction-contact"><a title="Contact" accesskey="9" href="contact-info">Contact</a></li>
+
+</ul>
 <div id="search" />
+<h1 id="portal-logo">
+  <a accesskey="1" href="">Maurits van Rees</a>
+</h1>
+<div id="menu" />
 <div id="content" />
 <div id="sidebar" />
 <div id="footer" />
+</div>
 </body>
 </html>
