--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,9 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html xmlns="http://www.w3.org/1999/xhtml"> <head>
 <title>Maurits van Rees Theme</title>
+<link rel="stylesheet" type="text/css" media="all" href="static/css/960.css" />
+
 </head>
 <body>
-<div id="visual-portal-wrapper">
+<div class="container_12">
+<div class="grid_6">
+<h1 id="portal-logo">
+  <a accesskey="1" href="">Maurits van Rees</a>
+</h1>
+</div>
+<div class="grid_6">
 <ul id="portal-siteactions">
 
     <li id="siteaction-sitemap"><a title="Site Map" accesskey="3" href="sitemap">Site Map</a></li>
@@ -12,13 +20,22 @@
 
 </ul>
 <div id="search" />
-<h1 id="portal-logo">
-  <a accesskey="1" href="">Maurits van Rees</a>
-</h1>
+</div>
+<div class="grid_12">
 <div id="menu" />
-<div id="content" />
-<div id="sidebar" />
-<div id="footer" />
+</div>
+<div class="clear">&#160;</div>
+<div class="grid_8">
+  <div id="content" />
+</div>
+<div class="grid_4">
+  <div id="sidebar" />
+</div>
+<div class="clear">&#160;</div>
+<div class="grid_12">
+  <div id="footer" />
+</div>
+<div class="clear">&#160;</div>
 </div>
 </body>
 </html>
