Link to Plone and Zest in the footer.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -33,7 +33,10 @@
 </div>
 <div class="clear">&#160;</div>
 <div class="grid_12">
-  <div id="footer" />
+  <div id="footer">
+    <p>Built using <a href="http://plone.org">Plone</a>.</p>
+    <p>Need a Web App based on Plone or Django?  Go to <a href="http://zestsoftware.nl/">Zest</a>!</p>
+  </div>
 </div>
 <div class="clear">&#160;</div>
 </div>
