--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"> <head>
 <title>Maurits van Rees Theme</title>
 <link rel="stylesheet" type="text/css" media="all" href="static/css/960.css" />
-
+<link rel="stylesheet" type="text/css" media="all" href="static/css/maurits.css" />
 </head>
 <body>
 <div class="container_12">
