Improve footer text and display.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -33,9 +33,11 @@
 </div>
 <div class="clear">&#160;</div>
 <div class="grid_12">
+<hr />
   <div id="footer">
     <p>Built using <a href="http://plone.org">Plone</a>.</p>
-    <p>Need a Web App based on Plone or Django?  Go to <a href="http://zestsoftware.nl/">Zest</a>!</p>
+    <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
+    <p>[Dutch] Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
   </div>
 </div>
 <div class="clear">&#160;</div>
