Load reset.css and text.css

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html xmlns="http://www.w3.org/1999/xhtml"> <head>
 <title>Maurits van Rees Theme</title>
+<link rel="stylesheet" type="text/css" media="all" href="static/css/reset.css" />
+<link rel="stylesheet" type="text/css" media="all" href="static/css/text.css" />
 <link rel="stylesheet" type="text/css" media="all" href="static/css/960.css" />
 <link rel="stylesheet" type="text/css" media="all" href="static/css/maurits.css" />
 </head>
@@ -41,6 +43,7 @@
   </div>
 </div>
 <div class="clear">&#160;</div>
+TODO: load google analytics.
 </div>
 </body>
 </html>
