--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div class="container_12">
-<div class="grid_6">
-<h1 id="portal-logo">
-  <a accesskey="1" href="">Maurits van Rees</a>
-</h1>
+<div class="grid_6 header">
+<div id="portal-logo">
+  <a href=""><img src="static/images/logo.jpg" alt="Home Maurits van Rees" /></a>
 </div>
-<div class="grid_6">
+</div>
+<div class="grid_6 header">
 <ul id="portal-siteactions">
 
     <li id="siteaction-sitemap"><a title="Site Map" accesskey="3" href="sitemap">Site Map</a></li>
