Add and use 960_simple.css, generated by http://960.gs specifically: http://www.spry-soft.com/grids/grid.css?column_width=60&column_amount=12&gutter_width=20

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -3,17 +3,17 @@
 <title>Maurits van Rees Theme</title>
 <link rel="stylesheet" type="text/css" media="all" href="static/css/reset.css" />
 <link rel="stylesheet" type="text/css" media="all" href="static/css/text.css" />
-<link rel="stylesheet" type="text/css" media="all" href="static/css/960.css" />
+<link rel="stylesheet" type="text/css" media="all" href="static/css/960_simple.css" />
 <link rel="stylesheet" type="text/css" media="all" href="static/css/maurits.css" />
 </head>
 <body>
-<div class="container_12">
-<div class="grid_6 header">
+<div class="container_12 header">&#160;
+<div class="grid_6">
 <div id="portal-logo">
   <a href=""><img src="static/images/logo.jpg" alt="Home Maurits van Rees" /></a>
 </div>
 </div>
-<div class="grid_6 header">
+<div class="grid_6">
 <ul id="portal-siteactions">
 
     <li id="siteaction-sitemap"><a title="Site Map" accesskey="3" href="sitemap">Site Map</a></li>
@@ -23,6 +23,9 @@
 </ul>
 <div id="search" />
 </div>
+&#160;
+</div>
+<div class="container_12">
 <div class="grid_12">
 <div id="menu" />
 </div>
