Less margin on .documentActions li

--- a/static/css/maurits.css
+++ b/static/css/maurits.css
@@ -22,6 +22,7 @@ body {
 .documentActions li {
     display: inline;
     list-style: none outside none;
+    margin-left: 0;
 }
 img {
     border: medium none;
