--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="static/css/maurits.css" />
 </head>
 <body>
-<div class="container_12 header">&#160;
+<div id="header" class="container_12">
 <div class="grid_6">
 <div id="portal-logo">
   <a href=""><img src="static/images/logo.jpg" alt="Home Maurits van Rees" /></a>
@@ -23,13 +23,12 @@
 </ul>
 <div id="search" />
 </div>
-&#160;
-</div>
-<div class="container_12">
+<div class="clear">&#160;</div>
 <div class="grid_12">
 <div id="menu" />
 </div>
-<div class="clear">&#160;</div>
+</div>
+<div id="main" class="container_12">
 <div class="grid_8">
   <div id="content" />
 </div>
@@ -37,16 +36,15 @@
   <div id="sidebar" />
 </div>
 <div class="clear">&#160;</div>
+</div>
+<div id="footer" class="container_12">
 <div class="grid_12">
 <hr />
-  <div id="footer">
-    <p>Built using <a href="http://plone.org">Plone</a>.</p>
-    <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
-    <p>[Dutch] Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
-  </div>
-</div>
-<div class="clear">&#160;</div>
+<p>Built using <a href="http://plone.org">Plone</a>.</p>
+<p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
+<p>[Dutch] Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
 TODO: load google analytics.
+</div>
 </div>
 </body>
 </html>
