Use the intro portrait as logo.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -10,7 +10,7 @@
 <div id="header" class="container_12">
 <div class="grid_6">
 <div id="portal-logo">
-  <a href=""><img src="static/images/logo.jpg" alt="Home Maurits van Rees" /></a>
+  <a href=""><img src="static/images/portrait_intro.jpg" alt="Home Maurits van Rees" /></a>
 </div>
 </div>
 <div class="grid_6">
