Actually print my name in the header.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 <div id="header" class="container_12">
-<div class="grid_6">
+<div class="grid_3">
 <div id="portal-logo">
   <a href=""><img src="static/images/portrait_intro.jpg" alt="Home Maurits van Rees" /></a>
 </div>
 </div>
 <div class="grid_6">
+<h1>Maurits van Rees</h1>
+</div>
+<div class="grid_3">
 <ul id="portal-siteactions">
-
     <li id="siteaction-sitemap"><a title="Site Map" accesskey="3" href="sitemap">Site Map</a></li>
-    <li id="siteaction-accessibility"><a title="Accessibility" accesskey="0" href="accessibility-info">Accessibility</a></li>
     <li id="siteaction-contact"><a title="Contact" accesskey="9" href="contact-info">Contact</a></li>
-
 </ul>
 <div id="search" />
 </div>
