--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -39,7 +39,7 @@
 </div>
 <div id="footer" class="container_12">
 <div class="grid_12">
-<hr />
+<p>&#169; 2011 Maurits van Rees</p>
 <p>Built using <a href="http://plone.org">Plone</a>.</p>
 <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
 <p>[Dutch] Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
