--- a/static/css/maurits.css
+++ b/static/css/maurits.css
@@ -33,6 +33,7 @@ img {
     display: inline;
     padding-left: 0.5em;
     margin-left: 0.5em;
+    font-weight: bold;
 }
 #portal-siteactions li a {
     text-decoration: none;
