Dutch Python programmer, fantasy writer, christian

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -15,6 +15,7 @@
 </div>
 <div class="grid_6">
 <h1>Maurits van Rees</h1>
+<p>Dutch Python programmer, fantasy writer, christian</p>
 </div>
 <div class="grid_3">
 <ul id="portal-siteactions">
