--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -30,10 +30,10 @@
 </div>
 </div>
 <div id="main" class="container_12">
-<div class="grid_8">
+<div class="grid_8 prefix_1">
   <div id="content" />
 </div>
-<div class="grid_4">
+<div class="grid_2 prefix_1">
   <div id="sidebar" />
 </div>
 <div class="clear">&#160;</div>
