--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -43,7 +43,7 @@
 <p>&#169; 2011 Maurits van Rees</p>
 <p>Built using <a href="http://plone.org">Plone</a> and <a href="http://pypi.python.org/pypi/xdv">XDV</a>.</p>
 <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
-<p>[Dutch] Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
+<p><em>[Dutch]</em> Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
 TODO: load google analytics.
 </div>
 </div>
