Added Google Analytics code.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -44,7 +44,17 @@
 <p>Built using <a href="http://plone.org">Plone</a> and <a href="http://pypi.python.org/pypi/xdv">XDV</a>.</p>
 <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
 <p><em>[Dutch]</em> Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
-TODO: load google analytics.
+<script type="text/javascript">
+ var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-16368080-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </div>
 </div>
 </body>
