Make the footer less lines.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -40,8 +40,7 @@
 </div>
 <div id="footer" class="container_12">
 <div class="grid_12">
-<p>&#169; 2011 Maurits van Rees</p>
-<p>Built using <a href="http://plone.org">Plone</a> and <a href="http://pypi.python.org/pypi/xdv">XDV</a>.</p>
+<p>&#169; 2011 Maurits van Rees. Built using <a href="http://plone.org">Plone</a> and <a href="http://pypi.python.org/pypi/xdv">XDV</a>.</p>
 <p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
 <p><em>[Dutch]</em> Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
 <script type="text/javascript">
