In xdv remove link elements from the content header. Instead put a few in the theme.  This gets rid of a few non-working alternative style sheets for smaller or larger text.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html xmlns="http://www.w3.org/1999/xhtml"> <head>
-<title>Maurits van Rees Theme</title>
+<link rel="shortcut icon" type="image/x-icon" href="http://localhost:5000/favicon.ico">
+<link rel="home" href="" title="Front page">
+<link rel="search" href="search_form" title="Doorzoek deze site">
+<link rel="author" href="" title="Auteursinformatie">
+<link rel="contents" href="sitemap" title="Website overzicht">
 </head>
 <body>
 <div id="header" class="container_12">
