Load /static/favicon.ico

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html xmlns="http://www.w3.org/1999/xhtml"> <head>
-<link rel="shortcut icon" type="image/x-icon" href="http://localhost:5000/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico">
 <link rel="home" href="" title="Front page">
 <link rel="search" href="search_form" title="Doorzoek deze site">
 <link rel="author" href="" title="Auteursinformatie">
