--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -40,9 +40,9 @@
 </div>
 <div id="footer" class="container_12">
 <div class="grid_12">
-<p>&#169; 2004-2016 Maurits van Rees. Built using <a href="http://plone.org">Plone</a> and <a href="http://pypi.python.org/pypi/xdv">XDV</a>.</p>
-<p>Need a Web App based on Plone or Django?  Go to my employer <a href="http://zestsoftware.nl/">Zest Software</a>.</p>
-<p><em>[Dutch]</em> Op zoek naar Online personeelsadministratie? Zest heeft <a href="http://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
+<p>&#169; 2004-2016 Maurits van Rees. Built using <a href="https://plone.org">Plone</a> and <a href="https://pypi.python.org/pypi/xdv">XDV</a>.</p>
+<p>Need a Web App based on Plone or Django?  Go to my employer <a href="https://zestsoftware.nl/">Zest Software</a>.</p>
+<p><em>[Dutch]</em> Op zoek naar Online personeelsadministratie? Zest heeft <a href="https://prettigpersoneel.nl/">Prettig Personeel</a> gemaakt.</p>
 <script type="text/javascript">
  var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-16368080-1']);
