Use gtag.js with anonymize_ip.

--- a/theme/templates/plone.html
+++ b/theme/templates/plone.html
@@ -40,18 +40,15 @@
 </div>
 <div id="footer" class="container_12">
 <div class="grid_12">
-<p>&#169; 2004-2017 Maurits van Rees. Built using <a href="https://plone.org">Plone</a> and <a href="https://pypi.python.org/pypi/xdv">XDV</a>.</p>
+<p>&#169; 2004-2018 Maurits van Rees. Built using <a href="https://plone.org">Plone</a> and <a href="https://pypi.python.org/pypi/xdv">XDV</a>.</p>
 <p>Need a Web App based on Plone or Django?  Go to my employer <a href="https://zestsoftware.nl/">Zest Software</a>.</p>
-<script type="text/javascript">
- var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-16368080-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-16368080-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-16368080-1', { 'anonymize_ip': true });
 </script>
 </div>
 </div>
